@@ -474,6 +474,14 @@ static int user_main(int argc, char *argv[])
       check_test_memory_usage();
 #endif
 
+#if !defined(CONFIG_DISABLE_PTHREAD) && defined(CONFIG_SCHED_SPORADIC)
+      /* Verify sporadic scheduling */
+
+      printf("\nuser_main: sporadic scheduler test\n");
+      sporadic_test();
+      check_test_memory_usage();
+#endif
+
 #ifndef CONFIG_DISABLE_PTHREAD
       /* Verify pthread barriers */
 
